--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 asgiref==3.3.4
 autocorrect==2.4.0
+chardet==4.0.0
+click==7.1.2
 Django==3.2
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
-pkg-resources==0.0.0
-pytz==2021.1
-sqlparse==0.4.1
-typing-extensions==3.7.4.3
-python-docx==0.8.10
-pdfplumber==0.5.27
+joblib==1.0.1
+lxml==4.6.3
 nltk==3.5
 numpy==1.19.5
+pdfminer.six==20200517
+pdfplumber==0.5.27
+Pillow==8.2.0
+pkg-resources==0.0.0
+pycryptodome==3.10.1
+python-docx==0.8.10
+pytz==2021.1
+regex==2021.4.4
+sortedcontainers==2.3.0
+sqlparse==0.4.1
+tqdm==4.60.0
+typing-extensions==3.7.4.3
+Wand==0.6.6
